--- a/gui/MainWindow.ui
+++ b/gui/MainWindow.ui
@@ -22,7 +22,11 @@
    </font>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Склеивание панорам</string>
+  </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>resource/icon/vision.png</normaloff>resource/icon/vision.png</iconset>
   </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QHBoxLayout" name="horizontalLayout">
@@ -140,9 +144,9 @@
        <property name="geometry">
         <rect>
          <x>10</x>
-         <y>280</y>
+         <y>240</y>
          <width>151</width>
-         <height>141</height>
+         <height>181</height>
         </rect>
        </property>
        <property name="title">
@@ -203,6 +207,25 @@
         </property>
         <property name="text">
          <string>3 изображение</string>
+        </property>
+       </widget>
+       <widget class="QPushButton" name="imageAllButton">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>140</y>
+          <width>131</width>
+          <height>31</height>
+         </rect>
+        </property>
+        <property name="font">
+         <font>
+          <family>Arial</family>
+          <pointsize>10</pointsize>
+         </font>
+        </property>
+        <property name="text">
+         <string>Все подряд</string>
         </property>
        </widget>
       </widget>
